# location-music

./: .gitmodules  meeblue-tryout.py  scan-test2.py  scan-test3.py
MeeBlueServer/: CMakeLists.txt  Main.qml  entitlements.plist  main.cpp  networkinfo.cpp  networkinfo.h  osclient.cpp  osclient.h  qtquickcontrols2.conf  resources.qrc
